[tool.poetry]
name = "transformers-from-scratch"
version = "0.1.0"
description = ""
authors = ["Will Cruse <willcruse123@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
